realiza ajustes indicados pelo SonarQube